# windtunnel-sim

./: .gitattributes  .gitignore  CLAUDE.md  README.md  USAGE.md  pyproject.toml  run.py  run3d.py
benchmarks/: results.csv  results3d.csv
lbm/: __init__.py  airfoil.py  cinema.py  config.py  fused.py  lattice.py  render.py  solver.py  units.py
lbm3d/: __init__.py  config.py  fused.py  render.py  solver.py
notes/: NOTES.md  phase6_verdict.md  scene_table.md  scene_table_3d.md
scenes/: airfoil_mh45_re20k.yaml  cavity_re100.yaml  channel_poiseuille.yaml  cylinder_re100.yaml  cylinder_re10k.yaml  cylinder_re50k.yaml  dev_smoke_re30.yaml  naca4412_a12_re15k.yaml  naca4412_a12_re3k.yaml  naca4412_a3_re15k.yaml  naca4412_a3_re3k.yaml  naca4412_re1k.yaml  naca4412_re1k_a0.yaml  naca4412_re1k_a8.yaml  naca4412_re20k.yaml  naca4412_re5k.yaml
scenes3d/: airfoil_mh45_re20k.yaml  channel_poiseuille.yaml  cylinder_re100.yaml  cylinder_re100_dev.yaml  cylinder_re300_modeA.yaml  dev_smoke_re30.yaml
scripts/: airfoil_beauty.py  airfoil_sweep.py  benchmark.py  benchmark3d.py  check_fused.py  check_fused3d.py  check_gpu.py  compare_clip.py  make_airfoil_scene.py  make_naca.py  make_video.py  mask_figure.py  scene_table.py  scene_table3d.py  spectrum.py  verdict.py
tests/: test_accuracy.py  test_airfoil.py  test_cinema.py  test_lattice.py  test_make_airfoil_scene.py  test_scenes.py  test_sgs.py  test_solver.py  test_units.py  test_web.py
tests3d/: test_lattice3d.py  test_render3d.py  test_scenes3d.py  test_solver3d.py
validation/: .gitkeep  accuracy_tau_sweep.py  cavity.py  (+4 more)
(+12 files in other folders)
