[project]
name = "windtunnel-sim"
version = "0.0.1"
description = "2D GPU lattice-Boltzmann wind tunnel (D2Q9), built for a dev-log video"
requires-python = ">=3.10"
dependencies = ["pyyaml", "numpy", "torch", "matplotlib", "imageio-ffmpeg"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
# Both suites run by default; run either alone with `pytest tests` (2D)
# or `pytest tests3d` (3D) — the versions are separate on purpose.
testpaths = ["tests", "tests3d"]
